--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URL = "mongodb+srv://itsarm028:@Ashikur12345@cluster0.xnzuhhz.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL = "mongodb+srv://arm12345:Ashikur12345@zomato.p0pmj2w.mongodb.net/?retryWrites=true&w=majority"
