API done and AWS is incomplete

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 MONGO_URL = "mongodb+srv://arm12345:Ashikur12345@zomato.p0pmj2w.mongodb.net/?retryWrites=true&w=majority"
 GOOGLE_CLIENT_ID = 905633045497-rtq3n91l277qc3cp5p3fs5odd65c28nh.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
+AWS_S3_ACCESS_KEY = AKIAVONS6GL2HODPWOE4
+AWS_S3_SECRET_KEY = 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
